samples/_failures_safe/1761512950_4aaf2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ce2681f.c: In function ‘main’:
./samples/SAFE/__tmp_3ce2681f.c:136:9: error: expected declaration or statement at end of input
  136 |         }
      |         ^
./samples/SAFE/__tmp_3ce2681f.c:136:9: error: expected declaration or statement at end of input
